--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@tensorflow/tfjs": "^3.18.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
+    "@tensorflow/tfjs-tflite": "^0.0.1-alpha.8",
     "@types/react-native-vector-icons": "^6.4.11",
+    "document": "^0.4.7",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-dropdown-picker": "^5.4.2",
