[FETCH API] Fetch Prediction from Azure
+ Integrated fetch from custom azure function API
+ Fix bug in retrieving json
+ May want to dynamically change file

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tensorflow/tfjs-tflite": "^0.0.1-alpha.8",
     "@types/react-native-vector-icons": "^6.4.11",
     "document": "^0.4.7",
+    "json5": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^4.12.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
