--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.69.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-fs": "^2.20.0",
+    "react-native-local-resource": "^0.1.6",
     "react-native-paper": "^4.12.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
