--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@tensorflow/tfjs": "^3.20.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react-native-vector-icons": "^6.4.11",
     "document": "^0.4.7",
+    "expo": "^46.0.10",
+    "expo-file-system": "^14.1.0",
     "json5": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.1",
