--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@tensorflow/tfjs": "^3.20.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react-native-vector-icons": "^6.4.11",
+    "async-storage": "^0.1.0",
     "document": "^0.4.7",
     "expo": "^46.0.10",
+    "expo-camera": "^12.3.0",
     "expo-file-system": "^14.1.0",
+    "expo-gl": "^11.4.0",
     "json5": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^4.12.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
