update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ buck-out/
 /vendor/bundle/
 src/modules/af/model_custom.tflite
 *.tflite
+*.bin
+src/assets/af/graph-model/model.json
+src/assets/af/layers-model/model.json
